# simple-bluetooth-ctl

./: Cargo.toml  config.json  plans.md
src/: bluetooth.rs  main.rs
