[package]
name = "SimpleBTCLI"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = {version = "0.11.8", features = ['serde']}
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = "1.0.228"
tokio = {version = "1.48.0", features = ['full']}
tokio-macros = {version = "0.2.0-alpha.6"}
